# jwm

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  JWM_X11RB_XCB_Video_Automation_README.md  P5A_HDR_IMPLEMENTATION_SUMMARY.md  P5A_HDR_TESTING_GUIDE.md  P5B_PER_MONITOR_SUMMARY.md  P5C_DIRTY_RECT_SUMMARY.md  P5D_SHADER_CACHE_SUMMARY.md  README.md  REFACTORING_PLAN.md  SECURITY.md  X11_COMPOSITOR_ARCHITECTURE.md  autostart.sh  collect_files.py  config.toml  dependency-trees.txt  jwm-wayland-debug.desktop  jwm-wayland.desktop  jwm-x11-debug.desktop  jwm-x11.desktop  jwm-x11rb-debug.desktop  jwm-x11rb.desktop  jwm-xcb-debug.desktop  jwm-xcb.desktop  picom.conf
.cargo/: config.toml
.github/: agent-display-layout-trigger  apply_display_layout.py  dependabot.yml  display-layout.patch  jwm-capture-apply.py  jwm-capture-error.txt  jwm-followup-fix.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agent/: apply_jwm_tool_reliability.py
.github/bootstrap/: optimize_x11_egl.py
.github/workflows/: agent-display-layout-patch.yml  agent-format.yml  agent-jwm-tool-reliability.yml  agent-optimize-x11-egl.yml  apply-interactive-capture.yml  apply-jwm-fix.yml  ci.yml  jwm-support-summary-patch.yml  locked-workflow-patch.yml  lockfile-artifact.yml  quick-xml-dependency-tree.yml  quick-xml-remediation.yml  quick-xml-tree-log.yml  security.yml  slime-integration.yml  waterlily-integration.yml
benches/: wm_benchmark.rs
docs/: METRICS_COMPLETE_GUIDE.md  METRICS_QUICK_START.md  METRICS_SOLUTION_SUMMARY.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_QUICK_REFERENCE.md  P6-P7_COMPLETE_OPTIMIZATIONS.md  P6A_ASYNC_X11_IMPLEMENTATION.md  P6B_GPU_FENCE_SYNC_TEST.md  P6C_PBO_UPLOAD_TEST.md  P6D_ASYNC_BLUR_IMPLEMENTATION.md  P6_COMPLETE_SUMMARY.md  P6_FINAL_SUMMARY.md  P6_OPTIMIZATION_SUMMARY.md  P7D_POWER_SAVING_GUIDE.md  WAYLAND_UDEV_COMPETITIVE_ROADMAP.md  X11_BACKEND_OPTIMIZATION_COMPLETE.md  XCB_BACKEND_REGRESSION_CHECKLIST.md  architecture.md  audio-recording.md  bilibili_compositor_script.md  roadmap.md  slime-hand-effect.md  startup.md  support-bundles.md  waterlily.md  window-border-glow.md  x11-compositor-checklist.md  x11-egl-gles.md
portal/: Cargo.toml  build.rs
portal/src/: capture.rs  dbus.rs  dmabuf.rs  ipc.rs  main.rs  picker.rs  pipewire_stream.rs  restore.rs  session.rs  wayland.rs
scripts/: .jwm_evolution_patch.py  .jwm_support_summary_patch.py  .locked_workflow_patch.py  bootstrap_deps.sh  check_system.sh  debug_jwm.sh  install-portal.sh  install_jwm_scripts.sh  run_nested.sh  test-portal.sh  xephyr.sh
src/: application.rs  config.rs  doctor.rs  ipc.rs  ipc_server.rs  jwm.rs  lib.rs  main.rs  miscellaneous.rs  sync_ext.rs  terminal_prober.rs
src/backend/: api.rs  common_define.rs  compositor_font.rs  edid.rs  error.rs  hdr_metadata.rs  mod.rs  sys_stats.rs  udev_kms.rs  wayland.rs  wayland_dummy_ops.rs  wayland_key_ops.rs  xcursor_theme.rs
src/backend/compositor_common/: annotations.rs  capture.rs  damage_tracker.rs  effects.rs  expose.rs  math.rs  media.rs  mod.rs  pixel_buffer_pool.rs  present.rs  profiler.rs  render_batcher.rs  rules.rs  screenshot.rs  transitions.rs  vsync.rs  wallpaper.rs  waterlily.rs  window_glow.rs  window_texture.rs  x11_bootstrap.rs  x11_connection.rs  x11_randr.rs
src/backend/shared_x11_compositor/: effects.rs  expose.rs  init.rs  mod.rs  overview.rs  pipeline.rs  postprocess.rs  present.rs  render.rs  types.rs  wallpaper.rs
src/backend/wayland_udev/: backend.rs  color_management.rs  color_pipeline.rs  foreign_toplevel_management.rs  gamma_control.rs  icc.rs  image_copy_capture.rs  mod.rs  output_management.rs  output_power.rs  screencopy.rs  state.rs  tearing_control.rs  virtual_pointer.rs  workspace_protocol.rs
src/backend/wayland_winit/: backend.rs
src/backend/wayland_x11/: backend.rs
src/backend/x11/: backend.rs  batch.rs  compositor.rs  edid.rs  event_coalescer.rs  mod.rs  shaders.rs  systray.rs
src/backend/x11_shared/: mod.rs
src/backend/x11rb/: backend.rs  batch.rs  compositor.rs  error_adapters.rs  mod.rs  shared_x11_adapters.rs  systray.rs
src/backend/xcb/: backend.rs  batch.rs  compositor_protocol.rs  mod.rs  present.rs
src/config/: validation.rs
src/core/: animation.rs  controller.rs  layout.rs  mod.rs  models.rs  state.rs  types.rs  workspace.rs
src/jwm/: client.rs  client_stack.rs  constraints.rs  event_dispatcher.rs  focus.rs  focus_manager.rs  geometry.rs  input_handler.rs  ipc_handler.rs  lifecycle.rs  monitor.rs  monitor_management.rs  mouse_handler.rs  navigation.rs  positioning.rs  process.rs  property_handler.rs  rendering.rs  rules.rs  session.rs  stacking.rs  statusbar.rs  strut_manager.rs  swallowing.rs  tag_manager.rs  types.rs  visibility.rs  window_state.rs
src/jwm/features/: audio_recording.rs  capture.rs  capture_plan.rs  expose_plan.rs  magnifier.rs  mod.rs  overview.rs  overview_plan.rs  recording.rs  recording_plan.rs  (+3 more)
src/renderer/: mod.rs  types.rs
tests/: architecture_boundaries.rs  support_bundle_schema.rs
tests/fixtures/: session_v1.json  session_v2.json  support_bundle_v1.json
tools/: README.md  compare_metrics.sh  generate_report.sh  integrate_slime_effect.py  jwm_support.rs  jwm_tool.rs  metrics_dashboard.sh  nested_smoke.rs  requirements-slime.txt  slime_pose_demo.py  slime_tracker.py  validate_slime_shaders.py  validate_waterlily_shaders.py
video-demo/: README.md  pyproject.toml
video-demo/demo-client/: Cargo.toml
video-demo/manifest/: scenes.toml
video-demo/runner/: __init__.py  demo_windows.py  environment.py  gpt_sovits_tts.py  input_driver.py  jwm_ipc.py  postproduction.py  recorder.py  run_demo.py  session_guard.py
video-demo/scripts/: recover-session.sh
video-demo/tests/: test_gpt_sovits_tts.py  test_input_driver.py  test_jwm_ipc.py  test_manifest.py  test_postproduction.py
video-demo/tts/: gpt-sovits-yinjian-v4.yaml
waterlily/: Manifest.toml  Project.toml  runner.jl
waterlily/src/: JwmWaterLily.jl  protocol.jl
waterlily/test/: runtests.jl
(+172 files in other folders)
