# [workspace]
# members = [".", "portal"]
# resolver = "2"

[package]
name = "jwm"
version = "0.2.0"
edition = "2024"
description = "A multi-backend X11 and Wayland window manager and compositor"
repository = "https://github.com/beamiter/jwm"
readme = "README.md"

[[bin]]
name = "jwm-tool"
path = "tools/jwm_tool.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
glob = "0.3.3"
signal-hook = "0.3.18"
slotmap = { version = "1.1.1", features = ["serde"] }
x11 = { version = "2.21.0", features = ["glx", "xlib", "xlib_xcb", "xcursor", "xfixes", "xinput", "xrandr", "xrender", "dpms", "xf86vmode"] }
x11rb = { version = "0.13.2", features = ["all-extensions", "allow-unsafe-code"] }
x11rb-protocol = "0.13.2"

libc = "0.2.186"
notify = "7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
chrono = "0.4.45"
log = "0.4.33"
toml = "0.9.12"
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
nix = { version = "0.30.1", features = ["signal", "inotify", "fs", "poll"] }
lazy_static = "1.5.0"
arc-swap = "1"
alsa = "0.10"
ab_glyph = "0.2.32"
rand = "0.9.5"
xkbcommon = "0.9.0"
bitflags = "2.13.0"
smithay = { git = "https://github.com/Smithay/smithay.git", branch = "master", default-features = false, features = [
"use_system_lib",
"wayland-backend",
"wayland_frontend",
"backend_x11",
"backend_winit",
"backend_udev",
"backend_libinput",
"backend_session_libseat",
"backend_drm",
"backend_gbm",
"backend_egl",
"renderer_gl",
"desktop",
"xwayland",
] }
calloop = { version = "0.14.4", features = ["signals"] }
glow = "0.16"
winit = "0.30.13"
png = "0.17"
image = "0.25"
xcursor = "0.3.10"
tracing = "0.1.44"
drm = "0.14.1"
drm-ffi = "0.9.1"
libseat = "0.2.4"
gbm = "0.18.0"
egl = "0.2.7"
xcb = { version = "1.7.0", features = ["composite", "shape", "randr", "damage", "present", "xfixes"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "wm_benchmark"
harness = false

# Reference-only release tuning (INTENTIONALLY DISABLED).
#
# IMPORTANT: Keep this entire [profile.release] block commented out. The project
# maintainer deliberately does not enable these settings by default. Do not turn
# them on as part of routine cleanup or generic performance work. Any activation
# must be a dedicated change with explicit maintainer approval, benchmark data,
# build-time impact, and crash/diagnostics review.
# [profile.release]
# opt-level = 3
# lto = "thin"
# codegen-units = 1
# panic = "unwind"
# strip = "symbols"
# incremental = false

# Profiling build: release-grade codegen but keeps symbols and skips strip so
# samply/perf can resolve frames. Use: cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
