[package]
name = "jwm-portal"
version = "0.1.0"
edition = "2024"
description = "xdg-desktop-portal ScreenCast backend for the jwm Wayland compositor"
license = "MIT"

[[bin]]
name = "jwm-portal"
path = "src/main.rs"

[dependencies]
# Async runtime — zbus + pipewire-rs both need executors.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
futures-util = "0.3"

# D-Bus for the xdg-desktop-portal backend interface.
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
enumflags2 = "0.7"

# Wayland client — match smithay's transitive 0.31.x to avoid two trees.
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# PipeWire bindings (freedesktop pipewire-rs); v1_2_0 feature targets the
# privately-installed PipeWire 1.2.8 in /opt/pipewire-1.2.
pipewire = { version = "0.10", features = ["v1_2_0"] }
libspa = { version = "0.10", features = ["v1_2_0"] }
libspa-sys = "0.10"

# Shared between portal and jwm for IPC matchers / output identity.
nix = { version = "0.30", features = ["fs", "mman"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1"
rand = "0.9"
